--- a/src/main/asciidoc/product/preface.adoc
+++ b/src/main/asciidoc/product/preface.adoc
@@ -1,15 +1,14 @@
 
 :sectnums!:
 
-[preface]
 = Preface
 
-:leveloffset: +2
+:leveloffset: +1
 
-include::fallback_content/conventions.adoc[]
+include::{productSourceDir}/fallback_content/conventions.adoc[]
 
-include::fallback_content/feedback.adoc[]
+include::{productSourceDir}/fallback_content/feedback.adoc[]
 
-:leveloffset: -2
+:leveloffset: -1
 
 :sectnums:
