--- a/src/main/asciidoc/product/transactions_overview/transactions_overview.adoc
+++ b/src/main/asciidoc/product/transactions_overview/transactions_overview.adoc
@@ -1,10 +1,8 @@
 = Transactions Overview
 :doctype: book
 :sectnums:
-:toc: left
-:icons: font
-:experimental:
-:sourcedir: .
+:toc: {toc}
+:icons: {icons}
 
 == What is a transaction?
 
@@ -138,7 +136,8 @@ For example, Synchronization participants do not need the ability to recover in 
 
 == Optimizations to the Protocol
 
-There are several variants to the standard two-phase commit protocol that are worth knowing about, because they can have an impact on performance and failure recovery. <<two_phase_variants>> gives more information about each one.
+There are several variants to the standard two-phase commit protocol that are worth knowing about, because they can have an impact on performance and failure recovery.
+<<two_phase_variants>> gives more information about each one.
 
 [[two_phase_variants]]
 .Variants to the Two-Phase Commit Protocol
