--- a/src/main/asciidoc/product/xts_guide/xts_guide.adoc
+++ b/src/main/asciidoc/product/xts_guide/xts_guide.adoc
@@ -1,25 +1,24 @@
 = XTS Guide
 :doctype: book
 :sectnums:
-:toc: left
-:icons: font
+:toc: {toc}
+:icons: {icons}
 :experimental:
-:sourcedir: .
 
-:leveloffset: +2
+:leveloffset: +1
 
-include::introduction.adoc[]
+include::{productSourceDir}/xts_guide/introduction.adoc[]
 
-include::getting_started.adoc[]
+include::{productSourceDir}/xts_guide/getting_started.adoc[]
 
-include::xts_api.adoc[]
+include::{productSourceDir}/xts_guide/xts_api.adoc[]
 
-include::stand_alone_coordination.adoc[]
+include::{productSourceDir}/xts_guide/stand_alone_coordination.adoc[]
 
-include::participant_crash_recovery.adoc[]
+include::{productSourceDir}/xts_guide/participant_crash_recovery.adoc[]
 
-include::web_service_transaction_management.adoc[]
+include::{productSourceDir}/xts_guide/web_service_transaction_management.adoc[]
 
-include::quickstarts_overview.adoc[]
+include::{productSourceDir}/xts_guide/quickstarts_overview.adoc[]
 
-:leveloffset: -2
+:leveloffset: -1
