--- a/src/main/asciidoc/project/appendix/idl_definitions.adoc
+++ b/src/main/asciidoc/project/appendix/idl_definitions.adoc
@@ -8,19 +8,15 @@ Because of differences between ORBs, and errors in certain ORBs, the idl availab
 You should always inspect the idl files prior to implementation to determine what, if any, differences exist.
 
 .CosTransactions.idl
-====
 [source,C]
 ----
-include::extras/CosTransactions.idl[]
+include::{projectSourceDir}/appendix/extras/CosTransactions.idl[]
 ----
-====
 
 .ArjunaOTS.IDL
-====
 [source,C]
 ----
-include::extras/ArjunaOTS.idl[]
+include::{projectSourceDir}/appendix/extras/ArjunaOTS.idl[]
 ----
-====
 
 :sectnums:
