--- a/src/main/asciidoc/project/compensations/compensations.adoc
+++ b/src/main/asciidoc/project/compensations/compensations.adoc
@@ -1,10 +1,8 @@
 = Compensating transactions
 :doctype: book
 :sectnums:
-:toc: left
-:icons: font
-:experimental:
-:sourcedir: .
+:toc: {toc}
+:icons: {icons}
 
 == Overview
 
