--- a/src/main/asciidoc/project/xts/xts.adoc
+++ b/src/main/asciidoc/project/xts/xts.adoc
@@ -1,16 +1,11 @@
 = XTS
 :doctype: book
 :sectnums:
-:toc: left
-:icons: font
-:experimental:
-:sourcedir: .
+:toc: {toc}
+:icons: {icons}
 
 :leveloffset: +1
-include::introduction.adoc[]
-
-include::transactions_overview.adoc[]
-
-include::protocols_overview.adoc[]
-
-:leveloffset: -2
+include::{projectSourceDir}/xts/introduction.adoc[]
+include::{projectSourceDir}/xts/transactions_overview.adoc[]
+include::{projectSourceDir}/xts/protocols_overview.adoc[]
+:leveloffset: -1
