--- a/src/main/asciidoc/product/development_guide/development_guide.adoc
+++ b/src/main/asciidoc/product/development_guide/development_guide.adoc
@@ -1,25 +1,23 @@
 = Development Guide
 :doctype: book
 :sectnums:
-:toc: left
-:icons: font
-:experimental:
-:sourcedir: .
+:toc: {toc}
+:icons: {icons}
 
-:leveloffset: +2
+:leveloffset: +1
 
-include::transactions.adoc[]
+include::{productSourceDir}/development_guide/transactions.adoc[]
 
-include::the_resource_manager.adoc[]
+include::{productSourceDir}/development_guide/the_resource_manager.adoc[]
 
-include::general_transaction_issues.adoc[]
+include::{productSourceDir}/development_guide/general_transaction_issues.adoc[]
 
-include::tools.adoc[]
+include::{productSourceDir}/development_guide/tools.adoc[]
 
-include::configuration_options.adoc[]
+include::{productSourceDir}/development_guide/configuration_options.adoc[]
 
-include::important_log_messages.adoc[]
+include::{productSourceDir}/development_guide/important_log_messages.adoc[]
 
-include::troubleshooting.adoc[]
+include::{productSourceDir}/development_guide/troubleshooting.adoc[]
 
-:leveloffset: -2
+:leveloffset: -1
