--- a/src/main/asciidoc/product/product_documentation.adoc
+++ b/src/main/asciidoc/product/product_documentation.adoc
@@ -1,28 +1,11 @@
 
-:leveloffset: 1
-include::product/book_info.adoc[]
-:leveloffset: 0
-
-:leveloffset: 1
-include::product/preface.adoc[]
-:leveloffset: 0
-
-:leveloffset: 1
-include::product/transactions_overview/transactions_overview.adoc[]
-:leveloffset: 0
-
-:leveloffset: 1
-include::product/failure_recovery/failure_recovery.adoc[]
-:leveloffset: 0
-
-:leveloffset: 1
-include::product/development_guide/development_guide.adoc[]
-:leveloffset: 0
-
-:leveloffset: 1
-include::product/xts_guide/xts_guide.adoc[]
-:leveloffset: 0
-
-:leveloffset: 1
-include::product/txbridge_guide/txbridge_guide.adoc[]
-:leveloffset: 0
+:toclevels: {toclevel}
+:leveloffset: +1
+include::{productSourceDir}/book_info.adoc[]
+include::{productSourceDir}/preface.adoc[]
+include::{productSourceDir}/transactions_overview/transactions_overview.adoc[]
+include::{productSourceDir}/failure_recovery/failure_recovery.adoc[]
+include::{productSourceDir}/development_guide/development_guide.adoc[]
+include::{productSourceDir}/xts_guide/xts_guide.adoc[]
+include::{productSourceDir}/txbridge_guide/txbridge_guide.adoc[]
+:leveloffset: -1
