--- a/src/main/asciidoc/project/appendix/core_class_definitions.adoc
+++ b/src/main/asciidoc/project/appendix/core_class_definitions.adoc
@@ -9,51 +9,39 @@ The aim of this appendix is to provide a quick reference guide to these classes 
 For clarity only the public and protected interfaces of the classes will be given.
 
 .Class [class]``LockManager``
-====
 [source,java]
 ----
-include::extras/LockManager_class.java[]
+include::{projectSourceDir}/appendix/extras/LockManager_class.java[]
 ----
-====
 
 .Class [class]``StateManager``
-====
 [source,java]
 ----
-include::extras/StateManager_class.java[]
+include::{projectSourceDir}/appendix/extras/StateManager_class.java[]
 ----
-====
 
 .Classes [class]``OutputObjectState``and [class]``InputObjectState``
-====
 [source,java]
 ----
-include::extras/OutputObjectState_class.java[]
+include::{projectSourceDir}/appendix/extras/OutputObjectState_class.java[]
 ----
-====
 
 .Classes [class]``OutputBuffer``and [class]``InputBuffer``
-====
 [source,java]
 ----
-include::extras/OutputBuffer_class.java[]
+include::{projectSourceDir}/appendix/extras/OutputBuffer_class.java[]
 ----
-====
 
 .Class [class]``Uid``
-====
 [source,java]
 ----
-include::extras/Uid_class.java[]
+include::{projectSourceDir}/appendix/extras/Uid_class.java[]
 ----
-====
 
 .Class [class]``AtomicAction``
-====
 [source,java]
 ----
-include::extras/AtomicAction_class.java[]
+include::{projectSourceDir}/appendix/extras/AtomicAction_class.java[]
 ----
-====
 
 :sectnums:
