--- a/src/main/asciidoc/project/core/core.adoc
+++ b/src/main/asciidoc/project/core/core.adoc
@@ -1,31 +1,14 @@
 = Narayana Core
 :doctype: book
 :sectnums:
-:toc: left
-:icons: font
-:experimental:
-:sourcedir: .
+:toc: {toc}
+:icons: {icons}
 
-:leveloffset: 2
-include::overview.adoc[]
-:leveloffset: 0
-
-:leveloffset: 2
-include::using_txcore.adoc[]
-:leveloffset: 0
-
-:leveloffset: 2
-include::general_transaction_issues.adoc[]
-:leveloffset: 0
-
-:leveloffset: 2
-include::hints_and_tips.adoc[]
-:leveloffset: 0
-
-:leveloffset: 2
-include::constructing_a_transactional_objects_for_java_application.adoc[]
-:leveloffset: 0
-
-:leveloffset: 2
-include::failure_recovery.adoc[]
-:leveloffset: 0
+:leveloffset: +1
+include::{projectSourceDir}/core/overview.adoc[]
+include::{projectSourceDir}/core/using_txcore.adoc[]
+include::{projectSourceDir}/core/general_transaction_issues.adoc[]
+include::{projectSourceDir}/core/hints_and_tips.adoc[]
+include::{projectSourceDir}/core/constructing_a_transactional_objects_for_java_application.adoc[]
+include::{projectSourceDir}/core/failure_recovery.adoc[]
+:leveloffset: -1
