--- a/src/main/asciidoc/project/jts/jts.adoc
+++ b/src/main/asciidoc/project/jts/jts.adoc
@@ -1,65 +1,40 @@
 = JTS
 :doctype: book
 :sectnums:
-:toc: left
-:icons: font
-:experimental:
-:sourcedir: .
+:toc: {toc}
+:icons: {icons}
 
 == Administration
 
 :leveloffset: +2
 
-include::introduction.adoc[]
-
-include::starting_and_stopping_transaction_manager.adoc[]
-
-include::ots_java_ee_transaction_service_management.adoc[]
-
-include::failure_recovery_administration.adoc[]
-
-include::orb_specific_configurations.adoc[]
-
-include::initializing_jbossts_applications.adoc[]
-
+include::{projectSourceDir}/jts/introduction.adoc[]
+include::{projectSourceDir}/jts/starting_and_stopping_transaction_manager.adoc[]
+include::{projectSourceDir}/jts/ots_java_ee_transaction_service_management.adoc[]
+include::{projectSourceDir}/jts/failure_recovery_administration.adoc[]
+include::{projectSourceDir}/jts/orb_specific_configurations.adoc[]
+include::{projectSourceDir}/jts/initializing_jbossts_applications.adoc[]
 :leveloffset: -2
 
 == Development
 
 :leveloffset: +2
-
-include::overview.adoc[]
-
-include::jbossts_basics.adoc[]
-
-include::ots.adoc[]
-
-include::constructing_an_ots_application.adoc[]
-
-include::jbossts_interface.adoc[]
-
-include::example.adoc[]
-
-include::trailmap.adoc[]
-
-include::failure_recovery.adoc[]
-
-include::jta_and_jts.adoc[]
-
-include::orb_specific_dev_configurations.adoc[]
-
+include::{projectSourceDir}/jts/overview.adoc[]
+include::{projectSourceDir}/jts/jbossts_basics.adoc[]
+include::{projectSourceDir}/jts/ots.adoc[]
+include::{projectSourceDir}/jts/constructing_an_ots_application.adoc[]
+include::{projectSourceDir}/jts/jbossts_interface.adoc[]
+include::{projectSourceDir}/jts/example.adoc[]
+include::{projectSourceDir}/jts/trailmap.adoc[]
+include::{projectSourceDir}/jts/failure_recovery.adoc[]
+include::{projectSourceDir}/jts/jta_and_jts.adoc[]
+include::{projectSourceDir}/jts/orb_specific_dev_configurations.adoc[]
 :leveloffset: -2
 
 == ORB Portability
 
 :leveloffset: +2
-
-include::orb_portability_introduction.adoc[]
-
-include::orb_portability_api.adoc[]
-
-:leveloffset: -1
-
-include::quick_start_to_jts_ots.adoc[]
-
-:leveloffset: -1
+include::{projectSourceDir}/jts/orb_portability_introduction.adoc[]
+include::{projectSourceDir}/jts/orb_portability_api.adoc[]
+include::{projectSourceDir}/jts/quick_start_to_jts_ots.adoc[]
+:leveloffset: -2
