--- a/src/main/asciidoc/project/project_documentation.adoc
+++ b/src/main/asciidoc/project/project_documentation.adoc
@@ -1,49 +1,17 @@
 
-:leveloffset: 1
-include::project/book_info.adoc[]
-:leveloffset: 0
-
-:leveloffset: 1
-include::project/preface.adoc[]
-:leveloffset: 0
-
-:leveloffset: 1
-include::project/core/core.adoc[]
-:leveloffset: 0
-
-:leveloffset: 1
-include::project/jta/jta.adoc[]
-:leveloffset: 0
-
-:leveloffset: 1
-include::project/jts/jts.adoc[]
-:leveloffset: 0
-
-:leveloffset: 1
-include::project/xts/xts.adoc[]
-:leveloffset: 0
-
-:leveloffset: 1
-include::project/lra/lra.adoc[]
-:leveloffset: 0
-
-:leveloffset: 1
-include::project/rts/rts.adoc[]
-:leveloffset: 0
-
-:leveloffset: 1
-include::project/stm/stm.adoc[]
-:leveloffset: 0
-
-:leveloffset: 1
-include::project/compensations/compensations.adoc[]
-:leveloffset: 0
-
-:leveloffset: 1
-include::project/osgi/osgi.adoc[]
-:leveloffset: 0
-
-:leveloffset: 1
-include::project/appendix/appendix.adoc[]
-:leveloffset: 0
+:toclevels: {toclevel}
+:leveloffset: +1
+include::{projectSourceDir}/book_info.adoc[]
+include::{projectSourceDir}/preface.adoc[]
+include::{projectSourceDir}/core/core.adoc[]
+include::{projectSourceDir}/jta/jta.adoc[]
+include::{projectSourceDir}/jts/jts.adoc[]
+include::{projectSourceDir}/xts/xts.adoc[]
+include::{projectSourceDir}/lra/lra.adoc[]
+include::{projectSourceDir}/rts/rts.adoc[]
+include::{projectSourceDir}/stm/stm.adoc[]
+include::{projectSourceDir}/compensations/compensations.adoc[]
+include::{projectSourceDir}/osgi/osgi.adoc[]
+include::{projectSourceDir}/appendix/appendix.adoc[]
+:leveloffset: -1
 
